tests/src/frontend/syntax/invalid/unprefixed_vector.sk
fun main(): String {
  a = [1, 2, 3];
  ""
}
